--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 dnssec-key-timing.txt
-draft-ietf-dnsop-dnssec-key-timing-03.pdf
-draft-ietf-dnsop-dnssec-key-timing-03.txt
-draft-ietf-dnsop-dnssec-key-timing-04.pdf
-draft-ietf-dnsop-dnssec-key-timing-04.txt
-draft-mekking-dnsop-dnssec-key-timing-bis-02.pdf
-draft-mekking-dnsop-dnssec-key-timing-bis-02.txt
+draft-ietf-dnsop-dnssec-key-timing-*.pdf
+draft-ietf-dnsop-dnssec-key-timing-*.txt
+draft-ietf-dnsop-dnssec-key-timing-*.html
+draft-ietf-dnsop-dnssec-key-timing-*.ps
+draft-mekking-dnsop-dnssec-key-timing-bis-*.pdf
+draft-mekking-dnsop-dnssec-key-timing-bis-*.txt
